Added Dark and Light Mode

--- a/Calculator/Calculator.csproj
+++ b/Calculator/Calculator.csproj
@@ -89,5 +89,11 @@
   <ItemGroup>
     <None Include="Resources\M.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\white.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sunIcon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
